gl33-master/src/test/deca/context/invalid/other/castImplicite2.deca
// Test de contexte invalide : valeur de retour fausse (float au lieu de int)

class MyClass{

    int decHalf(int a){
        return a - 0.5;
    }
}

{
    MyClass m = new MyClass();
    int x = m.decHalf(4);
}
